fix alignment of featured side on home page

--- a/less/styles.less
+++ b/less/styles.less
@@ -49,6 +49,12 @@
   }
 }
 
+.featured-side {
+  display: flex;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
 .featured-side a {
   float: none;
 }
